[tool.poetry]
name = "nrgplusplus"
version = "0.1.0"
description = "A modern c++ implementation of Numerical Renormalization Group"
authors = ["Saurabh Pradhan <saurabh@macair>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sphinx-rtd-theme = "^3.0.2"
breathe = "^4.35.0"
pydata-sphinx-theme = "^0.16.0"
sphinx = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
